docs/grammar.ebnf
(* Coco Language Grammar — Phase 1 *)
(* Version: 1.1 *)
(* Date: 2026-06-04 *)
(* Updated: Added pipe operators (|>, ->, <|, <-) and $$ placeholder *)

(* === Top Level === *)

program = { import_decl | export_decl | declaration | statement } ;

(* === Imports / Exports === *)

import_decl = "import" , ( named_import | namespace_import ) , "from" , string_literal , ";" ;
named_import = "{" , identifier , { "," , identifier } , [ "," ] , "}" ;
namespace_import = "*" , "as" , identifier ;

export_decl = "export" , ( class_decl | fn_decl | interface_decl | trait_decl | enum_decl | const_decl | type_alias ) ;

(* === Declarations === *)

declaration = const_decl
            | let_decl
            | fn_decl
            | class_decl
            | interface_decl
            | trait_decl
            | enum_decl
            | type_alias ;

const_decl = "const" , ( identifier | destructure_pattern ) , [ ":" , type_expr ] , "=" , expression , ";" ;
let_decl = "let" , ( identifier | destructure_pattern ) , [ ":" , type_expr ] , [ "=" , expression ] , ";" ;

destructure_pattern = "[" , identifier , { "," , identifier } , [ "," ] , "]"
                    | "{" , identifier , { "," , identifier } , [ "," ] , "}" ;

fn_decl = [ "async" ] , ( "function" | "fn" | "f" ) , identifier , [ type_params ] , "(" , [ param_list ] , ")" , [ ":" , type_expr ] , block ;

type_alias = "type" , identifier , [ type_params ] , "=" , type_expr , ";" ;

(* === Parameters === *)

param_list = param , { "," , param } , [ "," ] ;
param = identifier , [ ":" , type_expr ] , [ "=" , expression ] ;

(* === Classes === *)

class_decl = "class" , identifier , [ type_params ] , [ extends_clause ] , [ implements_clause ] , class_body ;
extends_clause = "extends" , type_expr ;
implements_clause = "implements" , type_expr , { "," , type_expr } ;

class_body = "{" , { class_member } , "}" ;
class_member = constructor_decl
             | method_decl
             | property_decl
             | static_member
             | use_trait ;

constructor_decl = "constructor" , "(" , [ constructor_param_list ] , ")" , block ;
constructor_param_list = constructor_param , { "," , constructor_param } , [ "," ] ;
constructor_param = { modifier } , identifier , [ ":" , type_expr ] , [ "=" , expression ] ;

modifier = "public" | "private" | "protected" | "readonly" | "static" ;

method_decl = { modifier } , [ "async" ] , [ "function" | "fn" | "f" ] , identifier , [ type_params ] , "(" , [ param_list ] , ")" , [ ":" , type_expr ] , block ;

property_decl = { modifier } , identifier , ":" , type_expr , [ "=" , expression ] , ";" ;

static_member = "static" , ( method_decl | property_decl ) ;

use_trait = "use" , identifier , { "," , identifier } , ";" ;

(* === Interfaces === *)

interface_decl = "interface" , identifier , [ type_params ] , [ extends_clause ] , interface_body ;
interface_body = "{" , { interface_member } , "}" ;
interface_member = method_signature | property_signature ;
method_signature = [ "async" ] , [ "function" | "fn" | "f" ] , identifier , [ type_params ] , "(" , [ param_list ] , ")" , ":" , type_expr , ";" ;
property_signature = identifier , ":" , type_expr , ";" ;

(* === Traits === *)

trait_decl = "trait" , identifier , [ type_params ] , trait_body ;
trait_body = "{" , { trait_member } , "}" ;
trait_member = method_decl | property_decl | method_signature ;

(* === Enums === *)

enum_decl = "enum" , identifier , [ ":" , type_expr ] , enum_body ;
enum_body = "{" , enum_variant , { "," , enum_variant } , [ "," ] , "}" ;
enum_variant = identifier , [ "(" , type_expr , { "," , type_expr } , ")" ] , [ "=" , expression ] ;

(* === Type Expressions === *)

type_expr = union_type ;
union_type = intersection_type , { "|" , intersection_type } ;
intersection_type = primary_type , { "&" , primary_type } ;

primary_type = "int" | "uint" | "float" | "bool" | "string" | "char" | "byte"
             | "null" | "void" | "never" | "mixed"
             | named_type
             | list_type
             | map_type
             | tuple_type
             | result_type
             | "(" , type_expr , ")"
             | fn_type ;

named_type = identifier , [ "<" , type_expr , { "," , type_expr } , ">" ] ;
list_type = "list" , "<" , type_expr , ">" ;
map_type = "map" , "<" , type_expr , "," , type_expr , ">" ;
tuple_type = "tuple" , "<" , type_expr , { "," , type_expr } , ">" ;
result_type = "Result" , "<" , type_expr , "," , type_expr , ">" ;
fn_type = "(" , [ type_expr , { "," , type_expr } ] , ")" , "=>" , type_expr ;

type_params = "<" , type_param , { "," , type_param } , ">" ;
type_param = identifier , [ ":" , type_expr ] ;

(* === Statements === *)

statement = expression_stmt
          | if_stmt
          | for_stmt
          | while_stmt
          | do_while_stmt
          | loop_stmt
          | return_stmt
          | throw_stmt
          | try_stmt
          | break_stmt
          | continue_stmt
          | parallel_stmt
          | coro_stmt
          | select_stmt
          | unsafe_stmt
          | synchronized_stmt
          | block ;

expression_stmt = expression , ";" ;

if_stmt = "if" , expression , block , { "else" , "if" , expression , block } , [ "else" , block ] ;

for_stmt = "for" , identifier , "in" , expression , block
         | "for" , "(" , [ identifier , "," , identifier ] , ")" , "in" , expression , block
         | "for" , "(" , [ declaration | expression_stmt ] , [ expression ] , ";" , [ expression ] , ")" , block ;

while_stmt = "while" , expression , block ;
do_while_stmt = "do" , block , "while" , expression , ";" ;
loop_stmt = "loop" , block ;

return_stmt = "return" , [ expression ] , ";" ;
throw_stmt = "throw" , expression , ";" ;
break_stmt = "break" , ";" ;
continue_stmt = "continue" , ";" ;

try_stmt = "try" , block , { catch_clause } , [ finally_clause ] ;
catch_clause = "catch" , "(" , identifier , [ ":" , type_expr ] , ")" , block ;
finally_clause = "finally" , block ;

parallel_stmt = "await" , "parallel" , "{" , { run_clause } , "}" ;
run_clause = "run" , ( expression , ";" | block ) ;

coro_stmt = "coro" , block ;

select_stmt = "select" , "{" , { case_clause } , "}" ;
case_clause = "case" , ( identifier , "=" , expression | "_" , "=" , expression ) , ":" , { statement } ;

unsafe_stmt = "unsafe" , block ;
synchronized_stmt = "synchronized" , block ;

block = "{" , { declaration | statement } , "}" ;

(* === Expressions === *)

expression = assignment_expr ;

assignment_expr = ternary_expr , [ assignment_op , assignment_expr ] ;
assignment_op = "=" | "+=" | "-=" | "*=" | "/=" | "%=" | "**=" | "<<=" | ">>=" | "&=" | "|=" | "^=" ;

ternary_expr = elvis_expr , [ "?" , expression , ":" , expression ] ;

elvis_expr = null_coalesce_expr , [ "?:" , elvis_expr ] ;

null_coalesce_expr = pipe_expr , [ "??" , null_coalesce_expr ] ;

pipe_expr = logical_or_expr , { pipe_op , logical_or_expr } ;
pipe_op = "|>" | "->" | "<|" | "<-" ;

(* Note: Mixing pipe operator directions in same expression is a semantic error *)
(* Note: $$ placeholder is only valid within pipe expressions *)

logical_or_expr = logical_and_expr , { "||" , logical_and_expr } ;
logical_and_expr = bitwise_or_expr , { "&&" , bitwise_or_expr } ;
bitwise_or_expr = bitwise_xor_expr , { "|" , bitwise_xor_expr } ;
bitwise_xor_expr = bitwise_and_expr , { "^" , bitwise_and_expr } ;
bitwise_and_expr = equality_expr , { "&" , equality_expr } ;
equality_expr = comparison_expr , { ( "==" | "!=" ) , comparison_expr } ;
comparison_expr = range_expr , { ( "<" | ">" | "<=" | ">=" | "<=>" ) , range_expr } ;

range_expr = shift_expr , [ ( ".." | "..=" ) , shift_expr ] ;
shift_expr = additive_expr , { ( "<<" | ">>" ) , additive_expr } ;
additive_expr = multiplicative_expr , { ( "+" | "-" ) , multiplicative_expr } ;
multiplicative_expr = exponent_expr , { ( "*" | "/" | "%" ) , exponent_expr } ;
exponent_expr = unary_expr , [ "**" , exponent_expr ] ;

unary_expr = ( "!" | "~" | "-" | "typeof" | "new" | "await" | "lazy" | "async" ) , unary_expr
           | postfix_expr ;

postfix_expr = primary_expr , { postfix_op } ;
postfix_op = "." , identifier
           | "?." , identifier
           | "[" , expression , "]"
           | "(" , [ argument_list ] , ")"
           | "!"
           | "?"
           | "++"
           | "--"
           | "as" , type_expr ;

argument_list = argument , { "," , argument } , [ "," ] ;
argument = [ identifier , ":" ] , expression ;

primary_expr = identifier
             | literal
             | "this"
             | "$"
             | "$$"
             | "super"
             | "(" , expression , ")"
             | array_literal
             | object_literal
             | arrow_fn
             | match_expr
             | [ "async" ] , ( "function" | "fn" | "f" ) , "(" , [ param_list ] , ")" , [ ":" , type_expr ] , ( "=>" , expression | block )
             | call_expr ;

arrow_fn = [ "async" ] , "(" , [ param_list ] , ")" , [ ":" , type_expr ] , "=>" , ( expression | block )
         | [ "async" ] , identifier , "=>" , ( expression | block ) ;

call_expr = identifier , [ type_args ] , "(" , [ argument_list ] , ")" ;
type_args = "<" , type_expr , { "," , type_expr } , ">" ;

match_expr = "match" , expression , "{" , { match_arm } , "}" ;
match_arm = pattern , "=>" , ( expression , "," | block , [ "," ] ) ;

pattern = literal
        | identifier
        | "is" , type_expr , [ "(" , identifier , { "," , identifier } , ")" ]
        | "is" , type_expr , [ "if" , expression ]
        | "_" ;

(* === Literals === *)

literal = int_literal
        | float_literal
        | string_literal
        | template_literal
        | char_literal
        | bool_literal
        | null_literal ;

int_literal = digit , { digit | "_" }
            | "0x" , hex_digit , { hex_digit | "_" }
            | "0b" , bin_digit , { bin_digit | "_" }
            | "0o" , oct_digit , { oct_digit | "_" } ;

float_literal = digit , { digit } , "." , digit , { digit } , [ exponent_part ]
              | digit , { digit } , exponent_part ;
exponent_part = ( "e" | "E" ) , [ "+" | "-" ] , digit , { digit } ;

string_literal = '"' , { string_char } , '"' ;
string_char = ? any character except '"' and '\' ?
            | escape_sequence ;

template_literal = "`" , { template_char | template_expr } , "`" ;
template_char = ? any character except '`', '\', and '${' ? | escape_sequence ;
template_expr = "${" , expression , "}" ;

char_literal = "'" , char_content , "'" ;
char_content = ? any single character except "'" and '\' ? | escape_sequence ;

escape_sequence = "\\" | "\n" | "\r" | "\t" | "\0" | "\'" | '\"' | "\$"
               | "\x" , hex_digit , hex_digit
               | "\u{" , hex_digit , { hex_digit } , "}" ;

bool_literal = "true" | "false" ;
null_literal = "null" ;

array_literal = "[" , [ expression , { "," , expression } , [ "," ] ] , "]" ;
object_literal = "{" , [ object_field , { "," , object_field } , [ "," ] ] , "}" ;
object_field = ( identifier | string_literal ) , ":" , expression ;

(* === Lexical === *)

identifier = ( letter | "_" ) , { letter | digit | "_" } ;
letter = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m"
       | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
       | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M"
       | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" ;
digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
hex_digit = digit | "a" | "b" | "c" | "d" | "e" | "f" | "A" | "B" | "C" | "D" | "E" | "F" ;
bin_digit = "0" | "1" ;
oct_digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" ;

(* === Comments === *)

comment = line_comment | block_comment ;
line_comment = "//" , { ? any character except newline ? } ;
block_comment = "/*" , { ? any character ? } , "*/" ;

(* === Reserved Words and Special Symbols === *)

(* Keywords: async, await, break, case, catch, class, const, continue, coro, do, else,
   enum, export, extends, false, finally, fn, for, function, if, implements, import,
   in, interface, is, lazy, let, loop, match, new, null, of, parallel,
   private, protected, public, readonly, return, run, select, static,
   synchronized, this, throw, trait, true, try, type, typeof, unsafe,
   use, void, while, Ok, Err, Result, f *)

(* Special symbols: $ (this shorthand), $$ (pipe placeholder) *)
